--- a/templates/form/fields.html.twig
+++ b/templates/form/fields.html.twig
@@ -36,7 +36,7 @@
                         <svg fill="none" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor" x-show="holdSetup[{{ rowIndex }}][{{ columnIndex }}] == 0">
                             <path fill-rule="evenodd" d="M4.5 7.5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-9a3 3 0 0 1-3-3v-9Z" clip-rule="evenodd" />
                         </svg>
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" x-show="holdSetup[{{ rowIndex }}][{{ columnIndex }}] > 0" x-cloak>
+                        <svg viewBox="0 0 24 24" fill="currentColor" x-show="holdSetup[{{ rowIndex }}][{{ columnIndex }}] > 0" x-cloak>
                             <path fill-rule="evenodd" d="M4.5 7.5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-9a3 3 0 0 1-3-3v-9Z" clip-rule="evenodd" />
                         </svg>
                     </div>
