--- a/templates/button/bulb.html.twig
+++ b/templates/button/bulb.html.twig
@@ -14,8 +14,20 @@
     <svg fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6" x-show="!bulbIsOn">
         <path stroke-linecap="round" stroke-linejoin="round" d="M12 18v-5.25m0 0a6.01 6.01 0 0 0 1.5-.189m-1.5.189a6.01 6.01 0 0 1-1.5-.189m3.75 7.478a12.06 12.06 0 0 1-4.5 0m3.75 2.383a14.406 14.406 0 0 1-3 0M14.25 18v-.192c0-.983.658-1.823 1.508-2.316a7.5 7.5 0 1 0-7.517 0c.85.493 1.509 1.333 1.509 2.316V18" />
     </svg>
-    <svg viewBox="0 0 24 24" fill="currentColor" class="size-6" x-show="bulbIsOn" x-cloak>
+    <svg fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6" x-show="bulbIsOn" x-cloak>
+        <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M 12,18 V 16.359375 M 14.25,20.039 c -1.486715,0.282329 -3.013285,0.282329 -4.5,0 m 3.75,2.383 c -0.997275,0.104407 -2.002725,0.104407 -3,0 m 5.103367,-6.833534 C 22.241,11.744632 19.665595,1.5030079 11.9995,1.5030079 8.6980055,1.527575 6.8627544,3.3824965 5.3975003,5.4233607 m -0.9051477,3.366762 c -0.00757,0.1952921 -0.00775,0.3909554 -4.021e-4,0.5864879 0.029384,0.7821304 0.1791722,1.5621684 0.4580189,2.3079924 C 5.5076629,13.17625 6.5815917,14.531042 8.241,15.492 9.091,15.985 9.75,16.825 9.75,17.808 V 18"
+            id="path890" />
+        <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="m 16.7745,16.776657 4.225,4.225 m -4.225,-4.225 L 6.5295,6.5316565 m -3.53,-3.53 3.53,3.53"
+            id="path825" />
+    </svg>
+    <!-- <svg viewBox="0 0 24 24" fill="currentColor" class="size-6" x-show="bulbIsOn" x-cloak>
         <path d="M12 .75a8.25 8.25 0 0 0-4.135 15.39c.686.398 1.115 1.008 1.134 1.623a.75.75 0 0 0 .577.706c.352.083.71.148 1.074.195.323.041.6-.218.6-.544v-4.661a6.714 6.714 0 0 1-.937-.171.75.75 0 1 1 .374-1.453 5.261 5.261 0 0 0 2.626 0 .75.75 0 1 1 .374 1.452 6.712 6.712 0 0 1-.937.172v4.66c0 .327.277.586.6.545.364-.047.722-.112 1.074-.195a.75.75 0 0 0 .577-.706c.02-.615.448-1.225 1.134-1.623A8.25 8.25 0 0 0 12 .75Z" />
         <path fill-rule="evenodd" d="M9.013 19.9a.75.75 0 0 1 .877-.597 11.319 11.319 0 0 0 4.22 0 .75.75 0 1 1 .28 1.473 12.819 12.819 0 0 1-4.78 0 .75.75 0 0 1-.597-.876ZM9.754 22.344a.75.75 0 0 1 .824-.668 13.682 13.682 0 0 0 2.844 0 .75.75 0 1 1 .156 1.492 15.156 15.156 0 0 1-3.156 0 .75.75 0 0 1-.668-.824Z" clip-rule="evenodd" />
-    </svg>
+    </svg> -->
 </button>
