--- a/templates/form/fields.html.twig
+++ b/templates/form/fields.html.twig
@@ -10,19 +10,32 @@
             emptyHoldSetup.fill(emptyRow, 0);
 
             return {
+                bulbIsOn: Alpine.$persist(false),
                 holdSetup: [],
                 holdSetupValue: {% if value is defined and value is not empty and value != '[]' %}"{{ value }}"{% else %}JSON.stringify(emptyHoldSetup){% endif %},
                 init() {
                     this.holdSetup = JSON.parse(this.holdSetupValue);
+                    if (this.bulbIsOn) {
+                        this.triggerBulb();
+                    }
                 },
                 clickHold(rowIndex, columnIndex) {
                     this.holdSetup[rowIndex][columnIndex] = (this.holdSetup[rowIndex][columnIndex] + 1) % 5;
                     this.holdSetupValue = JSON.stringify(this.holdSetup);
+                },
+                async triggerBulb() {
+                    try {
+                        const response = await  fetch('{{ path('bulb') }}',{
+                            method: "POST",
+                            body: this.holdSetupValue
+                        });
+                    } catch (error) {
+                    }
                 }
             };
         }
     </script>
-    <div x-data="initHoldSetup{{ random_id }}()" class="overflow-hidden rounded-lg mt-2">
+    <div x-data="initHoldSetup{{ random_id }}()" @bulb.window="triggerBulb()" class="overflow-hidden rounded-lg mt-2">
         {% for rowIndex in 0..rows-1 %}
             <div class="flex flex-row">
                 {% for columnIndex in 0..columns-1 %}
