--- a/templates/route/view.html.twig
+++ b/templates/route/view.html.twig
@@ -31,23 +31,27 @@
         return {
             bulbIsOn: Alpine.$persist(false),
             init() {
-                if (this.bulbIsOn) {
-                    this.triggerBulb();
-                }
+                this.triggerBulb();
+            },
+            observeBulb($event) {
+                this.bulbIsOn = $event.detail.isOn;
+                this.triggerBulb();
             },
             async triggerBulb() {
-                try {
-                    const response = await  fetch('{{ path('bulb') }}',{
-                        method: "POST",
-                        body: "{{ route_entity.holdSetup|json_encode }}"
-                    });
-                } catch (error) {
+                if (this.bulbIsOn) {
+                    try {
+                        const response = await fetch('{{ path('bulb') }}', {
+                            method: "POST",
+                            body: "{{ route_entity.holdSetup|json_encode }}"
+                        });
+                    } catch (error) {
+                    }
                 }
             }
         }
     }    
 </script>
-<div x-data="initRouteView()" @bulb.window="triggerBulb()" class="mx-auto max-w-2xl pb-5 divide-y divide-gray-100">
+<div x-data="initRouteView()" @bulb.window="observeBulb" class="mx-auto max-w-2xl pb-5 divide-y divide-gray-100">
     <div class="overflow-hidden rounded-lg py-5">
         {% for rowIndex in 0..route_entity.holdSetup|length-1 %}
             <div class="flex flex-row">
