--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,8 +35,8 @@
                             </button>
                             {% endblock %}
                         </div>
-                        <div class="ml-2.5 flex shrink-0 items-center sm:hidden">
-                            <h1 class="text-lg/6 font-semibold text-gray-900">{% block navigation_title %}{% endblock %}</h1>
+                        <div class="ml-2.5 flex items-center overflow-auto sm:hidden">
+                            <h1 class="text-lg/6 font-semibold text-gray-900 text-nowrap overflow-hidden text-ellipsis">{% block navigation_title %}{% endblock %}</h1>
                         </div>
                         <div class="flex flex-1 items-center justify-start sm:items-stretch">
                             <div class="hidden sm:flex sm:space-x-8">
@@ -49,7 +49,7 @@
                                 {% endfor %}
                             </div>
                         </div>
-                        <div class="absolute inset-y-0 right-0 flex items-center pr-2 gap-x-4 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
+                        <div class="inset-y-0 right-0 flex items-center pr-2 gap-x-4 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
                             {% block navigation_buttons %}{% endblock %}
                         </div>
                     </div>
