--- a/templates/route/index.html.twig
+++ b/templates/route/index.html.twig
@@ -17,8 +17,8 @@
     <ul role="list" class="divide-y divide-gray-100">
         {% for route in routes %}
           <li class="flex flex-wrap items-center justify-between gap-x-6 gap-y-4 py-5 flex-nowrap">
-              <div>
-                  <p class="text-sm/6 font-semibold text-gray-900">
+              <div class="overflow-auto">
+                  <p class="text-sm/6 font-semibold text-gray-900 text-nowrap overflow-hidden text-ellipsis">
                       <a href="{{ path('route_view', {id: route.id}) }}" class="hover:underline">{{ route.name }}</a>
                   </p>
                   <div class="mt-1 items-center text-xs/5 text-gray-500">
