--- a/templates/route/view.html.twig
+++ b/templates/route/view.html.twig
@@ -14,6 +14,7 @@
 
 {% block navigation_buttons %}
 {% include 'button/bulb.html.twig' %}
+{% include 'button/delete.html.twig' %}
 <button onclick="location.href='{{ path('route_edit', {id: route_entity.id}) }}'" type="button" class="relative rounded-full bg-white p-1 text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-primery-500 focus:ring-offset-2">
     <span class="absolute -inset-1.5"></span>
     <span class="sr-only">Edit Route</span>
