--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -73,6 +73,7 @@
             <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
                 {% block main %}{% endblock %}
             </div>
+            {% include 'component/flash.html.twig' %}
         </main>
     </body>
 </html>
