--- a/templates/setting/index.html.twig
+++ b/templates/setting/index.html.twig
@@ -3,7 +3,7 @@
 {% block navigation_title %}Settings{% endblock %}
 
 {% block navigation_buttons %}
-<button type="button" class="relative rounded-full bg-white p-1 text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-primery-500 focus:ring-offset-2" onclick="document.getElementById('setting_form').submit()">
+<button @click="document.getElementById('setting_form').submit()" type="button" class="relative rounded-full bg-white p-1 text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-primery-500 focus:ring-offset-2">
     <span class="absolute -inset-1.5"></span>
     <span class="sr-only">Save Settings</span>
     <svg fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
