--- a/templates/route/view.html.twig
+++ b/templates/route/view.html.twig
@@ -19,53 +19,9 @@
 {% endblock %}
 
 {% block main %}
-{% set colorClasses = ['text-gray-400', 'text-blue-400', 'text-red-400', 'text-yellow-400', 'text-green-400'] %}
-<script>
-    function initRouteView()
-    {
-        return {
-            bulbIsOn: Alpine.$persist(false),
-            init() {
-                this.triggerBulb();
-            },
-            observeBulb($event) {
-                this.bulbIsOn = $event.detail.isOn;
-                this.triggerBulb();
-            },
-            async triggerBulb() {
-                if (this.bulbIsOn) {
-                    try {
-                        const response = await fetch('{{ path('bulb') }}', {
-                            method: "POST",
-                            body: "{{ route_entity.holdSetup|json_encode }}"
-                        });
-                    } catch (error) {
-                    }
-                }
-            }
-        }
-    }    
-</script>
-<div x-data="initRouteView()" @bulb.window="observeBulb" class="mx-auto max-w-2xl pb-5 divide-y divide-gray-100">
-    <div class="overflow-hidden rounded-lg py-5">
-        {% for rowIndex in 0..route_entity.holdSetup|length-1 %}
-            <div class="flex flex-row">
-                {% for columnIndex in 0..route_entity.holdSetup[rowIndex]|length-1 %}
-                    {% set holdType = route_entity.holdSetup[rowIndex][columnIndex] %}
-                    <div style="flex-basis: calc(100% / {{ route_entity.holdSetup[rowIndex]|length }})" class="{{ colorClasses[holdType] }}">
-                        {% if holdType == 0 %}
-                            <svg fill="none" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor">
-                                <path fill-rule="evenodd" d="M4.5 7.5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-9a3 3 0 0 1-3-3v-9Z" clip-rule="evenodd" />
-                            </svg>
-                        {% else %}
-                            <svg viewBox="0 0 24 24" fill="currentColor">
-                                <path fill-rule="evenodd" d="M4.5 7.5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-9a3 3 0 0 1-3-3v-9Z" clip-rule="evenodd" />
-                            </svg>
-                        {% endif %}
-                    </div>
-                {% endfor %}
-            </div>
-        {% endfor %}
+<div class="mx-auto max-w-2xl pb-5 divide-y divide-gray-100">
+    <div class="pb-6 pt-4">
+        {% include 'component/hold_setup.html.twig' with {'rows': route_entity.holdSetup|length, 'columns': route_entity.holdSetup[0]|length, 'value': route_entity.holdSetup|json_encode, 'edit_mode': false} %}
     </div>
     <div class="py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
         <dt class="text-sm/6 font-medium text-gray-900">Grade</dt>
