--- a/templates/button/bulb.html.twig
+++ b/templates/button/bulb.html.twig
@@ -10,7 +10,7 @@
         }
     }
 </script>
-<button x-data="initBulbButton()" type="button" class="relative rounded-full bg-white p-1 text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-primery-500 focus:ring-offset-2" @click="clickBulbButton">
+<button x-data="initBulbButton()" @click="clickBulbButton" type="button" class="relative rounded-full bg-white p-1 text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-primery-500 focus:ring-offset-2">
     <span class="absolute -inset-1.5"></span>
     <span class="sr-only">Switch on LEDs</span>
     <svg fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6" x-show="!bulbIsOn">
