--- a/templates/button/filter.html.twig
+++ b/templates/button/filter.html.twig
@@ -8,8 +8,22 @@
             },
             changeValue(key, value) {
                 this[key] = value;
-                this.$dispatch('filter', { minGrade: this.minGrade, maxGrade: this.maxGrade, sortBy: this.sortBy });
+                this.dispatch();
             },
+            changeName($event) {
+                this.changeValue('name', $event.target.value);
+            },
+            reset() {
+                this.name = '';
+                this.minGrade = "{{ grades[0].value }}";
+                this.maxGrade = "{{ grades[grades|length-1].value }}";
+                this.sortBy = 'newest';
+                this.dispatch();
+            },
+            dispatch() {
+                this.$dispatch('filter', { name: this.name, minGrade: this.minGrade, maxGrade: this.maxGrade, sortBy: this.sortBy });
+            },
+            name: Alpine.$persist(""),
             minGrade: Alpine.$persist("{{ grades[0].value }}"),
             maxGrade: Alpine.$persist("{{ grades[grades|length-1].value }}"),
             sortBy: Alpine.$persist("newest")
@@ -59,6 +73,16 @@
                     </div>
                     <div class="relative mt-6 flex-1 px-4 sm:px-6">
                         <div class="mt-5 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+                            {# https://tailwindui.com/components/application-ui/forms/form-layouts#component-1c3f9860d66ce5cd9fb35ba7fde6721a #}
+                            <div class="sm:col-span-4">
+                                <label for="name" class="block text-sm/6 font-medium text-gray-900">Name</label>
+                                <div class="mt-2 grid grid-cols-1">
+                                    <input @input="changeName" id="name" name="name" type="text" :value="name" class="col-start-1 row-start-1 block w-full rounded-md bg-white py-1.5 pl-3 pr-10 text-base text-gray-900 outline outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline focus:outline-2 focus:-outline-offset-2 focus:outline-primery-600 sm:pr-9 sm:text-sm/6">
+                                    <svg @click="changeValue('name', '')" x-show="name != ''" class="cursor-pointer col-start-1 row-start-1 mr-3 size-5 self-center justify-self-end text-gray-400 sm:size-4" viewBox="0 0 16 16" fill="currentColor" class="size-4" x-cloak>
+                                        <path d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94 5.28 4.22Z" />
+                                    </svg>
+                                </div>
+                            </div>
                             <div class="sm:col-span-3">
                                 <label for="min_grade" class="block text-sm/6 font-medium text-gray-900">Minimum Grade</label>
                                 <div class="mt-2 grid grid-cols-1">
@@ -99,6 +123,7 @@
                                     </svg>
                                 </div>
                             </div>
+                            <button @click="reset" type="button" class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:mt-0 sm:w-auto">Reset</button>
                         </div>
                     </div>
                 </div>
