--- a/templates/button/filter.html.twig
+++ b/templates/button/filter.html.twig
@@ -55,7 +55,7 @@
                     From: "translate-x-0"
                     To: "translate-x-full"
                 -->
-                <div class="pointer-events-auto w-screen max-w-md" @click.away="filterOpen = false">
+                <div class="pointer-events-auto w-screen max-w-md" @click.away="filterOpen = false" x-transition:enter="transform transition ease-in-out duration-500 sm:duration-700" x-transition:enter-start="translate-x-full" x-transition:enter-end="translate-x-0" x-transition:leave="transform transition ease-in-out duration-500 sm:duration-700" x-transition:leave-start="translate-x-0" x-transition:leave-end="translate-x-full">
                 <div class="flex h-full flex-col overflow-y-scroll bg-white py-6 shadow-xl">
                     <div class="px-4 sm:px-6">
                     <div class="flex items-start justify-between">
