--- a/templates/component/flash.html.twig
+++ b/templates/component/flash.html.twig
@@ -30,7 +30,7 @@
     }
 </script>
 {# https://tailwindui.com/components/application-ui/overlays/notifications#component-a065edf8f08a35f06943b2e266ca9af1 #}
-<div x-data="initFlashMessages" aria-live="assertive" class="pointer-events-none fixed inset-0 flex items-end px-4 py-6 sm:items-start sm:p-6" x-show="showMessages" x-cloak>
+<div x-data="initFlashMessages" aria-live="assertive" class="pointer-events-none fixed inset-0 flex items-end px-4 py-6 sm:items-start sm:p-6">
     <div class="flex w-full flex-col items-center space-y-4 sm:items-end">
         <!--
         Notification panel, dynamically insert this into the live region when it needs to be displayed
@@ -42,7 +42,7 @@
             From: "opacity-100"
             To: "opacity-0"
         -->
-        <div class="pointer-events-auto w-full max-w-sm overflow-hidden rounded-lg bg-white shadow-lg ring-1 ring-black/5">
+        <div x-show="showMessages" class="pointer-events-auto w-full max-w-sm overflow-hidden rounded-lg bg-white shadow-lg ring-1 ring-black/5" x-transition:enter="transform ease-out duration-300 transition" x-transition:enter-start="translate-y-2 opacity-0 sm:translate-y-0 sm:translate-x-2" x-transition:enter-end="translate-y-0 opacity-100 sm:translate-x-0" x-transition:leave="transition ease-in duration-100" x-transition:leave-start="opacity-100" x-transition:leave-end="opacity-0" x-cloak>
         <div class="p-4">
             <div class="flex items-start">
             <div class="shrink-0">
