--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="data:image/png;base64,iVBORw0KGgo=">
         <title>{% block title %}owoody{% endblock %}</title>
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
