show states only if route_count > 0

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -3,6 +3,7 @@
 {% block navigation_title %}Dashboard{% endblock %}
 
 {% block main %}
+{% if route_count > 0 %}
 <div class="bg-white py-24 sm:py-32">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
         <dl class="grid grid-cols-1 gap-x-8 gap-y-16 text-center lg:grid-cols-3">
@@ -21,4 +22,5 @@
         </dl>
     </div>
 </div>
+{% endif %}
 {% endblock %}
