--- a/templates/route/index.html.twig
+++ b/templates/route/index.html.twig
@@ -3,6 +3,7 @@
 {% block navigation_title %}Routes{% endblock %}
 
 {% block navigation_buttons %}
+{% include 'button/angle.html.twig' %}
 <button @click="location.href='{{ path('route_new') }}'" class="relative rounded-full bg-white p-1 text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-primery-500 focus:ring-offset-2">
     <span class="absolute -inset-1.5"></span>
     <span class="sr-only">Add Route</span>
